# Kafka-Repo-Assignment-1

./: .dockerignore  .env  .gitignore  README.md  compose.txt  compose.txt1  compose.yaml  directory_structure.txt  docker-compose.txt  docker-compose.yaml  inv_main.txt  inv_mock_inv_service.txt  kong.env  kong.txt2  kong.yaml  notification_consumer.txt  order_consumer.txt  user_main.txt  user_mock_.txt
.devcontainer/: devcontainer.json  docker-compose.yml
api_1/: Dockerfile  pyproject.toml
api_1/api_1/: main.py  models.py  producer.py  settings.py
api_2/: Dockerfile.dev  pyproject.toml
api_2/api_2/: consumer.py  database.py  event_handler.py  main.py  model.py  settings.py
components/: pubsub.yaml
fastapi_1/: Dockerfile.prod  pyproject.toml
fastapi_1/fastapi_1/: .env  consumer.py  main.py  models.py  producer.py  settings.py
fastapi_2/: Dockerfile.cons  Dockerfile.dev  pyproject.toml
fastapi_2/fastapi_2/: consumer.py  consumer.txt  database.py  main.py  model.py  product.proto  settings.py
inventory_service/: .env  Dockerfile.inv  README.md  pyproject.toml
inventory_service/inventory_service/: auth_handler.py  consumer.py  dependencies.py  fetched_from_db.py  inventory.proto  inventory_pb2.py  main.py  mock_inv_service.py  model.py  models.py  notify_logic.py  producer.py  send_msg.py  settings.py  validation_logic.py
my_users_service/: Dockerfile.use  pyproject.toml
my_users_service/users_service/: consumer.py  dependencies.py  main.py  main.txt  mock_supabase.py  models.py  producer.py  settings.py
notification_service/: Dockerfile.not  pyproject.toml
notification_service/notification_service/: .env  consumer.py  email_function.py  inventory.proto  inventory_pb2.py  main.py  models.py  notification.proto  notification_pb2.py  notify_invservice.py  notify_logic.py  notify_orderservice.py  notify_userservice.py  notifyme_service.py  order.proto  order_pb2.py  producer.py  settings.py
order_service/: Dockerfile.ord  README.md  pyproject.toml
order_service/order_service/: auth_handler.py  consumer.py  database.py  dependencies.py  fetch_functions.py  main.py  mock_order.py  mock_order_service.py  model.py  models.py  notification.py  notification.txt  notify_logic.py  order.proto  order_pb2.py  producer.py  settings.py  validation_logic.py
payment_service/: Dockerfile.pay  pyproject.toml
payment_service/payment_service/: consumer.py  database.py  dependencies.py  main.py  model.py  models.py  notify_logic.py  order.proto  order_pb2.py  pay_process.py  payment.proto  payment_pb2.py  producer.py  settings.py
product_1/: Dockerfile.prod  README.md  pyproject.toml
product_2/: Dockerfile.cons  pyproject.toml
use_it/: .env  pyproject.toml
use_it/use_it/: .env  dependencies.py  main.py  models.py
user_service/: .env  README.md  pyproject.toml
users_service/: Dockerfile.use  pyproject.toml
(+41 files in other folders)
